# libnegf

./: .clang-format  .cmake-format.py  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.adoc  CONTRIBUTING.md  DevNotes  INSTALL.md  LICENSE  Makefile  Makefile.lib  Makefile.user.olab  Makefile.user.template  README.adoc  README.md  ReleaseNotes  config.cmake  git-pre-commit-hook.sh  license_libnegf_header.txt  license_sparskit_header.txt
cmake/: FindCustomBlas.cmake  LibNegfUtils.cmake  externalMpifx.cmake
doc/: .gitignore  Doxyfile  Makefile
ext_fftw/: Makefile  README  include  lib
ext_fypp/: CHANGELOG.rst  README.rst
ext_metis/metis-4.0/Graphs/: mtest
ext_metis/metis-4.0/Programs/: onmetis.c
ext_metis/test/: compiler.txt  defs.h  kmetis.c  kmetis.html  kmetis.sh  macros.h  metis.h  proto.h  qdot_iwce.graph  qdot_iwce.graph.iperm  qdot_iwce.graph.part.10  qdot_iwce.graph.part.40  rename.h  stdheaders.h  struct.h  tb1.xyz  tb2.xyz
ext_mpifx/: Makefile  README
ext_sparskit/: CMakeLists.txt  COMPLEX  COMPLEX_ITSOL  GNUmakefile
ext_sparskit/BLASSM/: blassm.f  diff  matvec.f  zblassm.f  zblassm2.f  zmatvec.f
ext_sparskit/FORMATS/: formats.f  sort.f  unary.f  zformats.f  zunary.f
ext_sparskit/INFO/: CALLS  infofun.f  zinfo13.f  zinfofun.f
ext_sparskit/INOUT/: inout.f  makefile  test  test.f  zinout.f
ext_sparskit/ITSOL/: CALLS  Notes  ilut.f  zilut.f  zitaux.f  ziters.f
ext_sparskit/MATGEN/FEM/: README  makefile  mat.hb
ext_sparskit/MATGEN/MISC/: zlatev.f
ext_sparskit/ORDERINGS/: CALLS  ccn.f  ccncommon.f  color.f  dsepart.f  zccn.f  zcolor.f  zdsepart.f
ext_sparskit/UNSUPP/: README
ext_sparskit/UNSUPP/BLAS1/: blas1.f
ext_system/: CMakeLists.txt  makefile  sys_calls.C  sys_calls.c  system_calls.f90  test.f90
include/: assert.fypp  types.fypp
include/libnegf/: cublas_v2.h  cusolverDn.h
license/: README  complex_sparskit.txt  libnegf.txt
license_tools/: addlicense.sh
mpi_include/: Makefile  mpi.f90
src/: CMakeLists.txt  GNUmakefile  Makefile  Testdos.F90  Testint.F90  Testiterativedns.F90  allocation.F90  clock.F90  complexbands.F90  constants.F90  contselfenergy.F90  cublas_interface.F90  cudautils.F90  distributions.F90  elem.F90  elph.F90  elphdb.F90  elphdd.F90  elphds.F90  elphinel.F90  energy_mesh.F90  equiv_kpoints.F90  extract.F90  fermi.F90  globals.F90  gpuroutines.cu  greendftb.F90  input_output.F90  integrations.F90  interactions.F90  inversions.F90  iterative.F90  iterative_cpu.F90  iterative_dns.F90  iterative_gpu.F90  iterative_ph.F90  lib_param.F90  libnegf.F90  ln_allocation.F90  ln_blockmat.F90  (+34 more)
src/api/: .gitignore  CMakeLists.txt  InitFailedException.h  Makefile  NEGFInitException.C  NEGFInitException.h  NEGFSolverException.C  NEGFSolverException.h  SolveFailedException.h  bind_fortran  exception_codes.h  fortran.h  libnegfAPICommon.f90  libnegf_api.f90  lnParams.h
src/api/binding/: begin_c.txt  begin_cpp.txt  begin_cpp_wrapped.txt  begin_f95.txt  end_f95.txt  map_negf_c.txt  map_upt_cpp_wrapped.txt
src/sparskit/: CMakeLists.txt  blassm.F90  formats.F90  skit_blassm.F90  skit_formats.F90  skit_module.F90  skit_unary.F90
src/tests/: Makefile  Testdos.F90  Testint.F90  Testiterativedns.F90  fermi.c  testcomplexband.F90  testcontactdos.F90  testcurrent.F90  testdosdns.F90  testneqint.F90  testreorder.F90
src/unused/: Makefile  blockpartition.F90  greendftb.F90  iterative.F90  metis_interface.F90  parameters.F90  readHS.F90  self_energy.c
sysmakes/: fugaku.cmake  make.generic  make.x86_64-linux-composerxe2011  make.x86_64-linux-gfortran  make.x86_64-linux-ifort  make.x86_64-linux-mpich-gfortran
tests/: CMakeLists.txt  ext_system_test.f90
tests/c_int/: .gitignore  CMakeLists.txt  GNUmakefile  README  hello.c  negf.in
tests/c_int_elph_deph/: CMakeLists.txt  c_int_elph_deph.c
tests/c_int_file/: CMakeLists.txt  hello.c  negf.in
tests/c_mpi_init/: CMakeLists.txt  c_mpi_init.c
tests/cpp_mpi_init/: CMakeLists.txt  cpp_mpi_init.cpp
tests/cpython/: .gitignore  GNUmakefile  README  cpynegf.c  hello_ctypes.py  libnegf.h  libnegf.py  setup.py
tests/f77int/: GNUmakefile  hello.F90  negf.in
tests/f90Si2x2/: CMakeLists.txt  hs.tar.xz  readHS.F90  test.F90
tests/f90Si_nin/: CMakeLists.txt  constants.F90  hs.tar.xz  matconv.F90  readHS.F90  test.F90
tests/f90Si_nin_40pl/: CMakeLists.txt  hs.tar.xz  test.F90
tests/f90_transmission/: CMakeLists.txt  hello.F90
tests/f90block_partition/: CMakeLists.txt  block_partition.F90
tests/f90elph_deph/: .gitignore  CMakeLists.txt  hello.F90  negf.in
tests/f90init/: CMakeLists.txt  f90init.F90
tests/f90int/: .gitignore  CMakeLists.txt  GNUmakefile  hello.F90  negf.in
tests/f90intApi/: GNUmakefile  README  hello.F90
tests/f90int_file/: CMakeLists.txt  GNUmakefile  README  hello.F90  negf.in
tests/f90issue6/: CMakeLists.txt  f90issue6.F90
tests/f90read_hs/: CMakeLists.txt  constants.F90  matconv.F90  readHS.F90  test.F90
tests/f90sgf_cache/: CMakeLists.txt  sgf_cache.F90
tests/fftmpi/: Makefile
tests/test1/: dr
tests/testCUDA/: CMakeLists.txt  test.f90
tests/testCUDA_decimation/: CMakeLists.txt  main.f90  random.f90
tests/testint/: create_H.f90  driver
utils/export/: negf-config.cmake.in
