add_executable(testCUDA_decimation main.f90 random.f90)
target_link_libraries(testCUDA_decimation negf)
target_link_libraries(testCUDA_decimation LAPACK::LAPACK)
target_include_directories(testCUDA_decimation PRIVATE ${BUILD_MOD_DIR})
set(dim_vector_space 30)
add_test(testCUDA_decimation testCUDA_decimation ${dim_vector_space})
